--- a/recipes/configs/phi3/mini_full.yaml
+++ b/recipes/configs/phi3/mini_full.yaml
@@ -3,7 +3,7 @@
 #
 # This config assumes that you've run the following command before launching
 # this run:
-#   tune download microsoft/Phi-3-mini-4k-instruct --output-dir /tmp/Phi-3-mini-4k-instruct --hf-token <HF_TOKEN> --ignore-patterns ""
+#   tune download microsoft/Phi-3-mini-4k-instruct --output-dir /home/boren/tune_llm/phi-3/Phi-3-mini-4k-instruct --hf-token <HF_TOKEN> --ignore-patterns ""
 #
 # Run this config on 4 GPUs using the following:
 #  tune run --nproc_per_node 4 full_finetune_distributed --config phi3/mini_full
@@ -19,40 +19,38 @@
 
 # Tokenizer
 tokenizer:
-  _component_: torchtune.models.phi3.phi3_mini_tokenizer
-  path: /tmp/Phi-3-mini-4k-instruct/tokenizer.model
+    _component_: torchtune.models.phi3.phi3_mini_tokenizer
+    path: /home/boren/tune_llm/phi-3/Phi-3-mini-4k-instruct/tokenizer.model
 
 # Dataset
 dataset:
-  _component_: torchtune.datasets.alpaca_cleaned_dataset
-  max_seq_len: 4096
+    _component_: torchtune.datasets.alpaca_cleaned_dataset
+    max_seq_len: 4096
 seed: null
 shuffle: True
 
 # Model Arguments
 model:
-  _component_: torchtune.models.phi3.phi3_mini
+    _component_: torchtune.models.phi3.phi3_mini
 
 checkpointer:
-  _component_: torchtune.utils.FullModelHFCheckpointer
-  checkpoint_dir: /tmp/Phi-3-mini-4k-instruct
-  checkpoint_files: [
-    model-00001-of-00002.safetensors,
-    model-00002-of-00002.safetensors
-  ]
-  recipe_checkpoint: null
-  output_dir: /tmp/Phi-3-mini-4k-instruct
-  model_type: PHI3_MINI
+    _component_: torchtune.utils.FullModelHFCheckpointer
+    checkpoint_dir: /home/boren/tune_llm/phi-3/Phi-3-mini-4k-instruct
+    checkpoint_files:
+        [model-00001-of-00002.safetensors, model-00002-of-00002.safetensors]
+    recipe_checkpoint: null
+    output_dir: /home/boren/tune_llm/phi-3/Phi-3-mini-4k-instruct
+    model_type: PHI3_MINI
 resume_from_checkpoint: False
 
 # Fine-tuning arguments
 batch_size: 2
 epochs: 1
 optimizer:
-  _component_: torch.optim.AdamW
-  lr: 5e-6
+    _component_: torch.optim.AdamW
+    lr: 5e-6
 loss:
-  _component_: torch.nn.CrossEntropyLoss
+    _component_: torch.nn.CrossEntropyLoss
 max_steps_per_epoch: null
 gradient_accumulation_steps: 16
 
@@ -68,7 +66,7 @@ dtype: bf16
 
 # Logging
 metric_logger:
-  _component_: torchtune.utils.metric_logging.DiskLogger
-  log_dir: ${output_dir}
-output_dir: /tmp/Phi-3-mini-4k-instruct
+    _component_: torchtune.utils.metric_logging.DiskLogger
+    log_dir: ${output_dir}
+output_dir: /home/boren/tune_llm/phi-3/Phi-3-mini-4k-instruct
 log_every_n_steps: 1
