--- a/recipes/configs/phi3/mini_lora_single_device.yaml
+++ b/recipes/configs/phi3/mini_lora_single_device.yaml
@@ -3,7 +3,7 @@
 #
 # This config assumes that you've run the following command before launching
 # this run:
-#   tune download microsoft/Phi-3-mini-4k-instruct --output-dir /tmp/Phi-3-mini-4k-instruct --hf-token <HF_TOKEN> --ignore-patterns ""
+#   tune download microsoft/Phi-3-mini-4k-instruct --output-dir /home/boren/tune_llm/phi-3/Phi-3-mini-4k-instruct --hf-token <HF_TOKEN> --ignore-patterns ""
 #
 # To launch on a single device, run the following command from root:
 #   tune run lora_finetune_single_device --config phi3/mini_lora_single_device
@@ -15,50 +15,47 @@
 #
 # This config works only for training on single device.
 
-
 # Model Arguments
 model:
-  _component_: torchtune.models.phi3.lora_phi3_mini
-  lora_attn_modules: ['q_proj', 'v_proj']
-  apply_lora_to_mlp: False
-  apply_lora_to_output: False
-  lora_rank: 8
-  lora_alpha: 16
+    _component_: torchtune.models.phi3.lora_phi3_mini
+    lora_attn_modules: ["q_proj", "v_proj"]
+    apply_lora_to_mlp: False
+    apply_lora_to_output: False
+    lora_rank: 8
+    lora_alpha: 16
 
 tokenizer:
-  _component_: torchtune.models.phi3.phi3_mini_tokenizer
-  path: /tmp/Phi-3-mini-4k-instruct/tokenizer.model
+    _component_: torchtune.models.phi3.phi3_mini_tokenizer
+    path: /home/boren/tune_llm/phi-3/Phi-3-mini-4k-instruct/tokenizer.model
 
 checkpointer:
-  _component_: torchtune.utils.FullModelHFCheckpointer
-  checkpoint_dir: /tmp/Phi-3-mini-4k-instruct
-  checkpoint_files: [
-    model-00001-of-00002.safetensors,
-    model-00002-of-00002.safetensors
-  ]
-  recipe_checkpoint: null
-  output_dir: /tmp/Phi-3-mini-4k-instruct
-  model_type: PHI3_MINI
+    _component_: torchtune.utils.FullModelHFCheckpointer
+    checkpoint_dir: /home/boren/tune_llm/phi-3/Phi-3-mini-4k-instruct
+    checkpoint_files:
+        [model-00001-of-00002.safetensors, model-00002-of-00002.safetensors]
+    recipe_checkpoint: null
+    output_dir: /home/boren/tune_llm/phi-3/Phi-3-mini-4k-instruct
+    model_type: PHI3_MINI
 resume_from_checkpoint: False
 
 # Dataset and Sampler
 dataset:
-  _component_: torchtune.datasets.alpaca_cleaned_dataset
+    _component_: torchtune.datasets.alpaca_cleaned_dataset
 seed: null
 shuffle: True
 batch_size: 2
 
 # Optimizer and Scheduler
 optimizer:
-  _component_: torch.optim.AdamW
-  weight_decay: 0.01
-  lr: 3e-4
+    _component_: torch.optim.AdamW
+    weight_decay: 0.01
+    lr: 3e-4
 lr_scheduler:
-  _component_: torchtune.modules.get_cosine_schedule_with_warmup
-  num_warmup_steps: 100
+    _component_: torchtune.modules.get_cosine_schedule_with_warmup
+    num_warmup_steps: 100
 
 loss:
-  _component_: torch.nn.CrossEntropyLoss
+    _component_: torch.nn.CrossEntropyLoss
 
 # Training
 epochs: 1
@@ -67,10 +64,10 @@ gradient_accumulation_steps: 64
 compile: False
 
 # Logging
-output_dir: /tmp/lora_finetune_output
+output_dir: /home/boren/tune_llm/phi-3/lora_finetune_output
 metric_logger:
-  _component_: torchtune.utils.metric_logging.DiskLogger
-  log_dir: ${output_dir}
+    _component_: torchtune.utils.metric_logging.DiskLogger
+    log_dir: ${output_dir}
 log_every_n_steps: 1
 log_peak_memory_stats: False
 
@@ -82,25 +79,25 @@ enable_activation_checkpointing: True
 # Show case the usage of pytorch profiler
 # Set enabled to False as it's only needed for debugging training
 profiler:
-  _component_: torchtune.utils.setup_torch_profiler
-  enabled: False
+    _component_: torchtune.utils.setup_torch_profiler
+    enabled: False
 
-  #Output directory of trace artifacts
-  output_dir: ${output_dir}/profiling_outputs
+    #Output directory of trace artifacts
+    output_dir: ${output_dir}/profiling_outputs
 
-  #`torch.profiler.ProfilerActivity` types to trace
-  cpu: True
-  cuda: True
+    #`torch.profiler.ProfilerActivity` types to trace
+    cpu: True
+    cuda: True
 
-  #trace options passed to `torch.profiler.profile`
-  profile_memory: False
-  with_stack: False
-  record_shapes: True
-  with_flops: False
+    #trace options passed to `torch.profiler.profile`
+    profile_memory: False
+    with_stack: False
+    record_shapes: True
+    with_flops: False
 
-  # `torch.profiler.schedule` options:
-  # wait_steps -> wait, warmup_steps -> warmup, active_steps -> active, num_cycles -> repeat
-  wait_steps: 5
-  warmup_steps: 5
-  active_steps: 2
-  num_cycles: 1
+    # `torch.profiler.schedule` options:
+    # wait_steps -> wait, warmup_steps -> warmup, active_steps -> active, num_cycles -> repeat
+    wait_steps: 5
+    warmup_steps: 5
+    active_steps: 2
+    num_cycles: 1
